--- a/resume.html
+++ b/resume.html
@@ -94,7 +94,7 @@
     <header>
         <div class="header-content">
             <img src="WhatsApp Image 2025-03-19 at 12.01.28 AM.jpeg" alt="Your Profile Picture" class="profile-picture">
-            <h1>ABISHIEK.K</h1>
+            <h1>SUDHARSAN.M</h1>
             <p>PPG COLLEGE OF ARTS & SCIENCE</p>
         </div>
     </header>
@@ -164,7 +164,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 ABISHIEK.K</p>
+        <p>&copy; 2025SUDHARSAN.M</p>
     </footer>
 
     <script>
